<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_nav"
    app:startDestination="@id/adminBooksFragment">
    <fragment
        android:id="@+id/adminBooksFragment"
        android:name="com.srinjoy.libbuddy.view.fragments.admin.AdminBooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_admin_books" >
        <action
            android:id="@+id/action_adminBooksFragment_to_bookDetailsFragment2"
            app:destination="@id/bookDetailsFragment2" />
    </fragment>
    <fragment
        android:id="@+id/adminAllStudentsFragment"
        android:name="com.srinjoy.libbuddy.view.fragments.admin.AdminAllStudentsFragment"
        android:label="@string/title_students"
        tools:layout="@layout/fragment_admin_all_students" >
        <action
            android:id="@+id/action_adminAllStudentsFragment_to_studentProfileFragment"
            app:destination="@id/studentProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/adminRequestsFragment"
        android:name="com.srinjoy.libbuddy.view.fragments.admin.AdminRequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_admin_requests" />
    <fragment
        android:id="@+id/adminSettingsFragment"
        android:name="com.srinjoy.libbuddy.view.fragments.admin.AdminSettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_admin_settings" />
    <fragment
        android:id="@+id/bookDetailsFragment2"
        android:name="com.srinjoy.libbuddy.view.fragments.BookDetailsFragment"
        android:label="@string/title_book_details" />
    <fragment
        android:id="@+id/studentProfileFragment"
        android:name="com.srinjoy.libbuddy.view.fragments.student.StudentProfileFragment"
        android:label="@string/title_profile" />
</navigation>